[tool.poetry]
name = "ztrack"
version = "0.1.0"
description = ""
authors = ["brody715 <brody71517@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"
flake8 = "^5.0.4"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
